<resources>
    <string name="app_name">NUMAD22Sp_JiayueZhao</string>
    <string name="hello_world">Hello_World</string>
    <string name="next">next</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">Pressed: -</string>
    <string name="about_me">About Me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="click_collector">click collector</string>
    <string name="description">description</string>
    <string name="item_name">item_name</string>
    <string name="item_description">item_description</string>
    <string name="website_name">Website Name</string>
    <string name="website_url">Website URL</string>
    <string name="jiayue_zhao_zhao_jiayu_northeastern_edu">Jiayue Zhao, zhao.jiayu@northeastern.edu</string>
    <string name="show_location">Show Location</string>
    <string name="activity_a5">Activity A5:</string>
</resources>